--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["graph", "editor", "mysql", "visualization"],
+  "keywords": [
+    "graph",
+    "editor",
+    "mysql",
+    "visualization"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.1.5",
-    "node-fetch": "^3.3.2",
     "express-session": "^1.17.3",
-    "mysql2": "^3.9.0"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.9.0",
+    "nanoid": "^5.1.5",
+    "node-fetch": "^3.3.2"
   }
 }
